--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Football Leauges</title>
+    <title>Football Leagues</title> 
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h3>hello world</h3>
-
+    <h3>Pick A League</h3>
+    <h4 id="league-title"></h4>
+    <div id="main"></div>
+    <div id="teams"></div>
     <script src="bundle.js"></script>
 </body>
 </html>
